--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "argon2": "^0.30.3",
     "aws-sdk": "^2.1378.0",
     "axios": "^1.4.0",
+    "chalk": "^4.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -36,6 +37,7 @@
     "mjml": "^4.14.1",
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.1",
+    "p-limit": "^3.1.0",
     "puppeteer": "^20.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
