--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mjml": "^4.14.1",
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.1.1",
+    "openai": "^3.2.1",
     "p-limit": "^3.1.0",
     "puppeteer": "^20.2.1",
     "reflect-metadata": "^0.1.13",
